--- a/src/public/css/category.css
+++ b/src/public/css/category.css
@@ -45,13 +45,17 @@ body {
 
 .main-section {
     width: 100%;
-    padding-bottom: 10px;
+    margin: 70px 0;
+    padding-top: 70px;
+    background-color: white;
 }
 
 .main-section > .container {
     height: 100%;
     text-align: center;
-    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .main-section > .container .title {
@@ -61,10 +65,12 @@ body {
 
 .categories {
     width: 100%;
+    height: 100%;
     height: auto;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 50px 0px;
+    padding: 70px 0 100px 0;
 }
 
 .category-wrapper {
