--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,3 +1,4 @@
+<%var error %>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,10 +13,16 @@
         <section class="register">
             <form class="form" method="POST">
                 <h1 class="title">Регистрация</h1>
+
+                <% if(error){ %>
+                <div class="error active"><%= error %></div>
+                <%} %>
+
                 <input
                     class="input"
                     type="text"
                     name="name"
+                    autocomplete="off"
                     placeholder="Имя"
                     required
                 />
