Add Category page and fixed index page

--- a/src/views/parts/footer.ejs
+++ b/src/views/parts/footer.ejs
@@ -57,8 +57,16 @@
                     </li>
                 </ul>
                 <div class="download">
-                    <span class="icon block googleplay"></span>
-                    <span class="icon block appstore"></span>
+                    <a
+                        href="https://play.google.com/store/apps/details?id=com.torg.torg&hl=ru&gl=US"
+                        target="_blank"
+                        class="icon block googleplay"
+                    ></a>
+                    <a
+                        href="https://apps.apple.com/uz/app/olx-uz/id665094472"
+                        target="_blank"
+                        class="icon block appstore"
+                    ></a>
                 </div>
             </div>
         </footer>
