--- a/src/views/parts/nav.ejs
+++ b/src/views/parts/nav.ejs
@@ -31,7 +31,7 @@
                             >Регистрация</a
                         >
                         <% }else {%>
-                        <a href="/users/login" class="nav-link"
+                        <a href="/users/exit" class="nav-link"
                             >Подать объявление</a
                         >
                         <a href="/users/profile" class="nav-link"
