--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -58,6 +58,19 @@
     transition: transform 0.3s, margin-right 0.3s;
 }
 
+.download .icon {
+    width: 150px;
+    height: 48px;
+    margin: 0 3px;
+    background: no-repeat 50% 50%;
+    background-size: 100%;
+    margin-left: 20px;
+    border: 1px solid #002f34;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.3s, margin-right 0.3s;
+}
+
 .download .icon.googleplay {
     background-repeat: no-repeat;
     background-image: url("	https://static.olx.uz/static/olxuz/packed/font/2fc9f37e6707acfc0e1255cec57c49a986.svg");
